# pasak3d

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
.github/workflows/: cleanup-preview.yml  cleanup-production.yml  deploy-preview.yml  deploy-web.yml  release.yml
docs/: 2026-04-30-pasak-design.md  2026-07-02-audja-comparison-strategy.md  2026-07-02-audja-teardown-capability-map.md  m1-joints-smoke-test.md  m1-smoke-test.md  m2-smoke-test.md  m2-testfit-smoke-test.md  m3-smoke-test.md  m3a-separate-caps-smoke-test.md  m3b-labels-smoke-test.md  m4-smoke-test.md  p2-m1-connector-framework-smoke-test.md  p2-m2-keyed-catalog-smoke-test.md  p2-m3-snapfit-smoke-test.md  p2-m4-connector-testfit-smoke-test.md  p3-m1-overhang-smoke-test.md  p3-m2-bedcut-preview-smoke-test.md  p4-m1-locking-key-smoke-test.md  p6-m1-sdf-smoke-test.md  p6-m2-regions-smoke-test.md  p6-m3-autosplit-smoke-test.md  p6-m4-hardening-smoke-test.md
docs/plans/: 2026-04-30-pasak-m1-foundation.md  2026-04-30-pasak-m2-single-cut.md  2026-04-30-pasak-m3-full-features.md  (+1 more)
public/: sample-keycap.3mf
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: App.autosplit.test.tsx  heatmap-apply.test.ts  heatmap-material.test.ts  model-info.test.ts  overhang.test.ts  plane-transform.test.ts  platform.test.ts  printer-presets.test.ts  scene.test.ts  session.test.ts  types-joint.test.ts
(+146 files in other folders)
